--- a/per/ma/package.json
+++ b/per/ma/package.json
@@ -1,17 +1,11 @@
 {
-    "name": "vite-project",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "preview": "vite preview"
-    },
-    "devDependencies": {
-      "vite": "^6.0.5"
-    },
-    "dependencies": {
-      "firebase": "^11.2.0"
-    }
-  }
+  "name": "dashboard",
+  "version": "1.0.0",
+  "description": "A simple dashboard",
+  "main": "index.html",
+  "scripts": {
+    "start": "live-server",
+    "deploy": "vercel"
+  },
+  "dependencies": {}
+}
